# formula_calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
docs/: design.md
examples/: CMakeLists.txt  advanced_usage.cpp  basic_usage.cpp  performance_test.cpp
include/formula/: ast.h  constant_registry.h  evaluator.h  formula_calculator.h  function_registry.h  lexer.h  parser.h  token.h  value.h  variable_manager.h
src/: ast.cpp  constant_registry.cpp  evaluator.cpp  formula_calculator.cpp  function_registry.cpp  lexer.cpp  parser.cpp  token.cpp  value.cpp  variable_manager.cpp
tests/: CMakeLists.txt  test_comparison.cpp  test_integration.cpp  test_logical.cpp  test_new_features.cpp  test_precedence.cpp  test_ternary.cpp  test_value.cpp
